[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cython>=3.0",
    "cmake>=3.20"
]
build-backend = "setuptools.build_meta"

[project]
name = "fasterapi"
version = "0.2.0"
description = "High-performance web framework with PostgreSQL and MCP support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FasterAPI Contributors"}
]
keywords = ["web", "framework", "async", "postgresql", "mcp", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Database",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "cython>=3.0",
]
pg = [
    "psycopg[binary]>=3.0",
    "asyncpg>=0.27",
]
mcp = [
    "cython>=3.0",
]
all = [
    "cython>=3.0",
    "psycopg[binary]>=3.0",
    "asyncpg>=0.27",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
fasterapi-mcp-proxy = "fasterapi.mcp.cli:main"

[project.urls]
Homepage = "https://github.com/bengamble/FasterAPI"
Documentation = "https://docs.fasterapi.dev"
Repository = "https://github.com/bengamble/FasterAPI"
Issues = "https://github.com/bengamble/FasterAPI/issues"

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
fasterapi = ["_native/*"]
"fasterapi.mcp" = ["*.pyx", "*.pxd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=fasterapi --cov-report=term-missing"

[tool.cython]
language_level = 3
